# framework.uifw.xorg.lib.libhwc

./: AUTHORS  COPYING  Makefile.am  configure.ac  libhwc.pc.in
include/X11/extensions/: hwc.h
packaging/: libhwc.spec
src/: Makefile.am  hwc.c
